# iaglobal

./: .env  .env.example  .gitignore  .goosehints  .opencode.json  AGENTS.md  ANÁLISE_LEIS_HOLLIWELL.md  CONFIGURACAO_RAPIDA.md  MANIFEST.md  README.md  WEB_INTERFACE.md  arquitetura.txt  assistente.py  auto_trainer.py  bandit_report.json  cache.py  cli.py  config.py  converter.py  daemon_monitor.py  diagnostico_erros.txt  docker-compose.search.yml  evo-full-cycle-child-gen1_genome.json  evo-full-cycle_genome.json  evo-obsidian-test-child-gen1_genome.json  evo-obsidian-test_genome.json  evolucao_cerebral.md  executor.py  executor_crítico.py  memory.py  memory_error.py  memory_vector.py  mesh.cbor  multi_agent.py  plaintext.txt  pyproject.toml  pyrightconfig.json  pyvenv.cfg  refactor_metabolic.py  reflexion_engine.py  (+5 more)
.opencode/: AGENTS.md
.opencode/commands/: mcp.md
architecture/: architecture_snapshot.json  collision_baseline.json  ubiquitous_language.md
docker/: searxng.yml
docs/: ARCHITECTURE.md  BIOMETRIC_FLOW.md  CONTAMINATION_PREVENTION.md  CRITIC-AGENT_GUIDELINES  ENGINE_INTEGRATION.md  ENTROPY_SENTINEL_GUIDE.md  FINAL_REPORT_SEARXNG_APOPTOSIS.md  FLUXO_BIOMETRICO.md  FUSION_ENGINE_GUIDE.md  GENESIS_INTEGRATION_GUIDE.md  INSTRUCTION_WEB_INTERFACE.md  INTEGRACAO_EVOLUTION_CLI_CORE.md  INTERFACE.md  IVM_AXIOM_PERSISTENCE.md  LocalLLaMA.md  MCP_OPERATIONS.md  METABOLIC_APOPTOSIS_WITH_CRITIC.md  METABOLIC_TEST_PLAN.md  ROADMAP.md  ROADMAP_0.md  ROADMAP_1.md  ROADMAP_2.md  ROADMAP_3.md  SEARXNG_DEPLOYMENT.md  SEJA-UM-ARQUITETO-DE-IA-AUTO-EVOLUTIVA.md  SYNTAX_VALIDATION_GUIDE.md  WEB_EVOLUTION_INTEGRATION.md  arquitetura_evolucao.md  evolucao_cerebral.md  iaglobal_long_duration_test.md  leiame.md  leiame2.md  plano_evolution_7dias.md  python_normalizer.md  teste_longa_duracao_iaglobal.md  topology_contract.md
docs/TRAFFIC_LIGHT_ARCHITECTURE/: TRAFFIC_LIGHT_ARCHITECTURE.md
docs/obsidian/: CENTRAL_NERVOUS_SYSTEM.md
docs/pipeline/: USAGE_PIPELINE.md
docs/plano-de-evolucao/: 00_GENESIS.txt  MANIFEST.md  agent_registry.json  lineage_validator.py
docs/servers/: MCP_OPERATIONS.md  Mcp_monitor.md  ROADMAP_SERVERS_MUTATIONS.md  SERVER_ARCHITECTURE.md  pasta_server.md
docs/temp/: relatorio_funcoes.txt  temp.md
iaglobal/: __init__.py  __main__.py  _paths.py  asgi.py  auditoria_arquitetural.py  check_integrations.py  demo_genesis_gatekeeper.py  demo_integracao_completa.py  exceptions.py  integration_registry.py  ivm_compliance.py  settings.py  stem_pool.py  tree_iaglobal.txt  urls.py
iaglobal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iaglobal/agents/: __init__.py  agent_base.py  agent_roles.py  coder_agent.py  critic_agent.py  debugger_agent.py  dependency_agent.py  enhancement_agent.py  evolution_agent.py  failure_analysis_agent.py  intent_classifier_agent.py  knowledge_writer_agent.py  law_guardian_agent.py  mitosis_engine.py  multi_agent.py  multi_coder_agent.py  orchestrator_agent.py  performance_audit_agent.py  performance_design_agent.py  planner_agent.py  pm_agent.py  prompt_improver.py  reflexion_agent.py  regenerator_agent.py  requirements_agent.py  result_agent.py  search_agent.py  security_audit_agent.py  security_design_agent.py  semantic_validator.py  skill_generator_agent.py  social.py  tester_agent.py  tool_caller_agent.py  typing_agent.py  validator.py
iaglobal/api/: __init__.py  mcp_server.py
iaglobal/artifacts/: __init__.py  artifact_factory.py
iaglobal/chappie/: __init__.py  bandit_evolution.py  error_enricher.py  ivm_axiom.py  ivm_compliance.py  lineage_guardian.py  vacuum_daemon.py
iaglobal/cli/: __main__.py  bootstrap.py  bootstrap_engine.py  evolution_lab.py  learn.py  life_signals.py  main.py  output.py  status.py  ui_cli.py
iaglobal/cognition/: adaptive_router.py  correction_context.py  memory_first_router.py  outcome_tracker.py  reputation_engine.py  task_fingerprint.py
iaglobal/colony_comms/: __init__.py  fitness.py  genesis_handshake.py  integrator.py  queen.py  worker.py
iaglobal/communication/: __init__.py  fitness.py  genesis_handshake.py  integrator.py  queen.py  worker.py
iaglobal/core/: __init__.py  acetylcholine_bus.py  agent_roles.py  apoptosis.py  assistant.py  assistant.py.bkp  auto_correction.py  bootstrap_engine.py  code_assembler.py  cognitive_proxy.py  cognitive_runtime.py  config.py  critic_batch_queue.py  decision_engine.py  (+19 more)
scripts/: audit_registry_migration.py  auto_fix_indentation.py  bandit_evolutiva_dashboard.py  bitcoin_monitor_24h.py  bootstrap_knowledge.py  deploy_searxng.sh  detect_async_violations.py  gravar_instintos.py  install_mcp.sh  mapear_especializacoes.py  mcp_command_handler.py  mcp_server_entrypoint.py  opencode_mcp_integration.py  refactor_agents.py  register_mcp_with_opencode.py  run_bitcoin_monitor.sh  run_mcp_server_check.py  smoke_test.py  start_mcp_with_opencode.py  test_ciclo_metabolico.py  test_mcp_endpoints.py  test_memory_apoptosis.py
searxng/: settings.yml
tests/: benchmark_providers.py  conftest.py  test_adaptive_router.py  test_adaptive_threat_detector.py  test_agentmailbox_communication.py  test_ai_audit_compliance.py  test_analyze_orphans.py  test_ancestry_tree.py  test_astgateway_sandboxRules.py  test_bandit_life_signals.py  test_benchmark_cpu_dispersion.py  test_benchmark_pipeline.py  test_builder_handler_fallback.py  test_cbor2_efficiency.py  test_check_agent_imports.py  test_check_node_imports.py  test_checkpoint.py  test_clarity_directive.py  test_clarity_directive_node.py  test_code_executor.py  test_cognitive.py  test_communication_resilience.py  test_conftest.py  test_contextweaver.py  test_cpu_affinity.py  test_darwin_harness.py  test_delta_sleep.py  test_dna_lineage.py  test_entropy_sentinel.py  test_epigenetic_bandit_integration.py  test_epigenetic_registry.py  test_epigenetic_simple.py  test_evolution_committee.py  test_evolution_engine.py  test_evolution_integrity.py  test_evolution_memory_integration.py  test_evolutionengine.py  test_extreme_stress_scenarios.py  test_feedback_loop.py  test_fixes_pipeline_nodes.py  (+65 more)
(+2714 files in other folders)
